[project]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "prapti0",email = "prapti.12104151@lpu.in"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pubmed_paper_fetcher", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:main"
